Uploading news from backend

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -13453,3 +13453,9 @@ img {
         background-attachment: scroll;
     }
 }
+
+.newsbanner{
+    display: block;
+    width: 100%;
+    max-width: 800px;
+}
