--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,7 +48,7 @@
                 <div class="topbar-right">
                     <div class="topbar-right">
                         <span class="topbar-widget"><a href="#">Privacy policy</a></span>
-                        <span class="topbar-widget"><a href="#">Request Quote</a></span>
+                        <span class="topbar-widget"><a href="{% url 'upload_news' %}">Add a news</a></span>
                         <span class="topbar-widget"><a href="#">FAQ</a></span>
                     </div>
                 </div>
