--- a/templates/news-single.html
+++ b/templates/news-single.html
@@ -53,7 +53,7 @@
                 <div class="topbar-right">
                     <div class="topbar-right">
                         <span class="topbar-widget"><a href="#">Privacy policy</a></span>
-                        <span class="topbar-widget"><a href="#">Request Quote</a></span>
+                        <span class="topbar-widget"><a href="{% url 'upload_news' %}">Add a news</a></span>
                         <span class="topbar-widget"><a href="#">FAQ</a></span>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 {% if news.title %}
-                                    <h1>Blog Title: {{ news.title }}</h1>
+                                    <h1>News || {{ news.title }}</h1>
                                 {% else %}
                                     <h1> This blog doesn't exist </h1>
                                 {% endif %}
@@ -126,7 +126,7 @@
                             <div class="blog-read">
                                 <img alt="{{ news.title }}" src="{{ news.image.url }}" class="newsbanner"/>
                                 <div class="post-text">
-                                    <p style="text-align: justify">{{ news.content }}</p>
+                                    <p style="text-align: justify">{{ news.content|linebreaks }}</p>
                                     <span class="post-date">{{ news.date_published }}</span>
                                     <span class="post-author">{{ news.author }}</span>
                                     <span class="post-like">181</span>
@@ -227,7 +227,7 @@
                                 <div class="small-border"></div>
                                 <ul>
                                     {% for news in recent_articles %}
-                                        <li><span class="date">{{ news.date_published }}</span><a href="{% url 'newsT' news.id %}">&nbsp;{{ news.title|truncatechars:30 }} </a></li>
+                                        <li><span class="date">{{ news.date_published|date:'d M Y' }}</span><a href="{% url 'newsT' news.id %}">&nbsp;{{ news.title|truncatechars:30 }} </a></li>
                                     {% endfor %}
                                 </ul>
                             </div>
