--- a/templates/news-single.html
+++ b/templates/news-single.html
@@ -134,88 +134,37 @@
                             </div>
                             <div class="spacer-single"></div>
                             <div id="blog-comment">
-                                <h4>Comments (5)</h4>
+                                <h4>Comments ({{ comment_count }})</h4>
                                 <div class="spacer-half"></div>
-                                <ol>
-                                    <li>
-                                        <div class="avatar">
-                                            <img src="{% static 'images/misc/avatar.png' %}" alt="" /></div>
-                                        <div class="comment-info">
-                                            <span class="c_name">John Smith</span>
-                                            <span class="c_date id-color">15 January 2020</span>
-                                            <span class="c_reply"><a href="#">Reply</a></span>
-                                            <div class="clearfix"></div>
+                                
+                                <!-- Display Comments -->
+                                    <div id="comments-section">
+                                        {% for comment in comments %}
+                                        <div class="comment-box">
+                                            <div class="avatar">
+                                                <img src="{% static 'images/misc/avatar.png' %}" alt="" />
+                                            </div>
+                                            <div class="comment-info">
+                                                <span class="c_name">{{ comment.name }}</span>
+                                                <span class="c_date id-color">{{ comment.date_posted|date:"d F Y" }}</span>
+                                                <span class="c_reply"><a href="#">Reply</a></span>
+                                                <div class="clearfix"></div>
+                                            </div>
+                                            <div class="comment">{{ comment.message }}</div>
                                         </div>
-                                        <div class="comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
-                                        <ol>
-                                            <li>
-                                                <div class="avatar">
-                                                    <img src="{% static 'images/misc/avatar.png' %}" alt="" /></div>
-                                                <div class="comment-info">
-                                                    <span class="c_name">John Smith</span>
-                                                    <span class="c_date id-color">15 January 2020</span>
-                                                    <span class="c_reply"><a href="#">Reply</a></span>
-                                                    <div class="clearfix"></div>
-                                                </div>
-                                                <div class="comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                                                    explicabo.</div>
-                                            </li>
-                                        </ol>
-                                    </li>
-                                    <li>
-                                        <div class="avatar">
-                                            <img src="{% static 'images/misc/avatar.png' %}" alt="" /></div>
-                                        <div class="comment-info">
-                                            <span class="c_name">John Smith</span>
-                                            <span class="c_date id-color">15 January 2020</span>
-                                            <span class="c_reply"><a href="#">Reply</a></span>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                        <div class="comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
-                                        <ol>
-                                            <li>
-                                                <div class="avatar">
-                                                    <img src="{% static 'images/misc/avatar.png' %}" alt="" /></div>
-                                                <div class="comment-info">
-                                                    <span class="c_name">John Smith</span>
-                                                    <span class="c_date id-color">15 January 2020</span>
-                                                    <span class="c_reply"><a href="#">Reply</a></span>
-                                                    <div class="clearfix"></div>
-                                                </div>
-                                                <div class="comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                                                    explicabo.</div>
-                                            </li>
-                                        </ol>
-                                    </li>
-                                    <li>
-                                        <div class="avatar">
-                                            <img src="{% static 'images/misc/avatar.png' %}" alt="" /></div>
-                                        <div class="comment-info">
-                                            <span class="c_name">John Smith</span>
-                                            <span class="c_date id-color">15 January 2020</span>
-                                            <span class="c_reply"><a href="#">Reply</a></span>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                        <div class="comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
-                                    </li>
-                                </ol>
+                                        {% endfor %}
+                                    </div>
+                                
                                 <div class="spacer-single"></div>
+                                
+                                <!-- Comment Form -->
                                 <div id="comment-form-wrapper">
                                     <h4>Leave a Comment</h4>
                                     <div class="comment_form_holder">
-                                        <form id="contact_form" name="form1" class="form-default" method="post" action="#">
-                                            <label>Name</label>
-                                            <input type="text" name="name" id="name" class="form-control" />
-                                            <label>Email <span class="req">*</span></label>
-                                            <input type="text" name="email" id="email" class="form-control" />
-                                            <div id="error_email" class="error">Please check your email</div>
-                                            <label>Message <span class="req">*</span></label>
-                                            <textarea cols="10" rows="10" name="message" id="message" class="form-control"></textarea>
-                                            <div id="error_message" class="error">Please check your message</div>
-                                            <div id="mail_success" class="success">Thank you. Your message has been sent.</div>
-                                            <div id="mail_failed" class="error">Error, email not sent</div>
-                                            <p id="btnsubmit">
-                                                <input type="submit" id="send" value="Send" class="btn btn-custom" /></p>
+                                        <form method="post" action="{% url 'newsT' news.id %}">
+                                            {% csrf_token %}
+                                            {{ form.as_p }}
+                                            <button type="submit" class="btn btn-custom">Send</button>
                                         </form>
                                     </div>
                                 </div>
